# staff

./: .gitignore  LICENSE  file1.json  page.html
aikaz/: kurs.cpp  t4.cpp  t5.cpp  t6.cpp  t7.cpp  t8.cpp  t9.cpp  tasks.txt  описание курсовой.docx  описание курсовой.md  описание.docx
aikaz/output/: t1  test4.csv  test_file.txt
ant rice/: index.html  riceClassification.csv  Описание (1).docx  Описание.docx  Описание.md
auth/: authBeline.html  autoAuthBeline.html  closeAuthBeline.html
bugs/: .clang-format  CMakeLists.txt  base64.cpp  base64.hpp  plan.txt  q_test.cpp  research.cpp
bugs/include/: maze_utils.hpp  nn.hpp  researcher.hpp
bugs/old/: correct_1.cpp  t_c_1.cpp
bugs/output/: test.txt
bugs/output/tests/: answers.txt  test_0.txt  test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_16.txt  test_17.txt  test_18.txt  test_19.txt  test_2.txt  test_20.txt  test_21.txt  test_22.txt  test_23.txt  test_24.txt  test_25.txt  test_26.txt  test_27.txt  test_28.txt  test_29.txt  test_3.txt  test_30.txt  test_31.txt  test_32.txt  test_33.txt  test_34.txt  test_35.txt  test_36.txt  test_37.txt  test_38.txt  test_39.txt  test_4.txt  test_40.txt  test_41.txt  test_42.txt  test_43.txt  (+61 more)
bugs/src/: CMakeLists.txt  base64.cpp  main.cpp  maze_utils.cpp  old_research_proj.cpp
bugs/tests/: CMakeLists.txt  base64_test.cpp  bitops_test.cpp
bugs/xlam/: main.cpp  map.txt
gemeni_user/: app_config.ini  ceframe.py  config_manager.py  file_manager.py  gen_ai_api_configurator.py  log_2024-07-16_09-31-22.txt  logger.py  main.py  spoiler.py
homeWebPage/: page.html
hwinnobr/: ДЗ7 Волковdocx.html
liderstvo/: 2.html  probnik1.html
olimp/: table.html
projMSS/: jquery.simulate.js  main.html
projMSS/ckeditor5/: README.md
topor/: HA 1 - PCA.ipynb
(+4 files in other folders)
